#6, #10 Написал разметку второго Activity, создал WebView

--- a/app/src/main/res/layout/activity_second_activiti.xml
+++ b/app/src/main/res/layout/activity_second_activiti.xml
@@ -5,8 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     tools:context=".SecondActiviti">
+
+
+    <TextView
+        android:id="@+id/drinkName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <WebView
+        android:id="@+id/webBrowser"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/drinkName"
+        android:layout_marginTop="20dp" />
 
 
 </RelativeLayout>
