--- a/app/src/main/res/layout/activity_second_activiti.xml
+++ b/app/src/main/res/layout/activity_second_activiti.xml
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/drinkName"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        />
 
 
 </RelativeLayout>
