--- a/app/src/main/res/layout/activity_second_activiti.xml
+++ b/app/src/main/res/layout/activity_second_activiti.xml
@@ -14,8 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:textSize="20sp"
+        android:layout_marginTop="@dimen/sizeTitleActiviti2"
+        android:textSize="@dimen/sizeTextTitleActiviti2"
         android:textStyle="bold" />
 
     <WebView
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/drinkName"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/distanceToTitleActiviti2"
         />
 
 
